--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aoe4-twitch-tech-tree",
+  "name": "unofficial-aoe4-tech-tree",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
